--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     
 <!-- Trailer -->    
     <video controls>
-        <source src="/video/trailer.mp4">
-        <source src="/video/trailer.webm">
+        <source src="video/trailer.mp4">
+        <source src="video/trailer.webm">
     </video>
 
 <!-- Actors -->    
