--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <title>Movie Title</title>
 
 <!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
 <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicons/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png"/>
+    <link rel="manifest" href="/img/favicons/site.webmanifest"/>
+    <meta name="msapplication-TileColor" content="#2b5797"/>
+    <meta name="theme-color" content="#ffffff"/>
 
 <!-- Normalize CSS via CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
 <!-- Required Plugin Stylesheets -->    
-    <link rel="stylesheet" href="css/mediaelement.css">
+    <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
 <!-- My Awesome Styling -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
 </head>
 
@@ -121,11 +121,11 @@
 
 
 <!-- jQuery Library via CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- Plugins(s) -->
-    <script src="js/lettering.js"></script>
-    <script src="js/mediaelement.js"></script>
+    <script type="text/javascript" src="js/lettering.js"></script>
+    <script type="text/javascript" src="js/mediaelement.js"></script>
 <!-- My Scripts -->
-    <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
