--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </video>
 
 <!-- Actors -->    
-        <section>
+        <section id="actors">
 
             <figure>
                 <img src="img/Keanu Reeves.jpg" alt="Keanu Reeves" title="Keanu Reeves"/>
@@ -116,8 +116,7 @@
 <!-- Footer -->
     <footer>
 
-        <p>Copyright &copy; <span class="currentYear">YEAR</span> Name of Studio(s)</p>
-
+        <p>Copyright &copy; <span class="currentYear">YEAR</span> Warner Bros.</p>
           
     </footer>
 
