--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
     <main>
     
 <!-- Trailer -->    
-    <video controls>
-        <source src="video/trailer.mp4">
-        <source src="video/trailer.webm">
-    </video>
+        <video controls>
+            <source src="video/trailer.mp4">
+            <source src="video/trailer.webm">
+        </video>
+
+        <section id="summary">
+            <h2>Summary</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium delectus odio illum omnis error eos dicta architecto qui ipsum, culpa repellat quas iure nisi numquam a velit suscipit ullam quidem.</p>
+        </section>
 
 <!-- Actors -->    
         <section id="actors">
