Update trailer section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <main>
     
 <!-- Trailer -->    
-        <video controls>
-            <source src="video/trailer.mp4">
-            <source src="video/trailer.webm">
-        </video>
+        <section id="trailer">
+            <video controls>
+                <source src="video/trailer.mp4">
+                <source src="video/trailer.webm">
+            </video>
+        </section>    
 
         <section id="summary">
             <h2>Summary</h2>
