--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 <!-- Navigation -->
         <nav>
             <a href="#trailer">Trailer</a>
-            <a href="summary">Summary &amp; Actors</a>
-            <a href="#screenshots">Screenshots &amp; More info</a>
+            <a href="#summary">Summary</a>
+            <a href="#actors">Actors</a>
+            <a href="#screenshots">Screenshots</a>
+            <a href="#more_info">More info</a>
         </nav>
 
     <div id="container">    
