--- a/index.html
+++ b/index.html
@@ -113,21 +113,27 @@
 
             <ul>
                 <li>
+                    <h5>Purchase Tickets</h5>
                     <a href="https://www.fandango.com/">
                         <img src="img/fandango_logo.png" alt="Fandango" title="Fandango"/>
                     </a>
                 </li>
                 <li>
+                    <h5>IMDB</h5>
                     <a href="https://www.imdb.com/title/tt0133093">
                         <img src="img/imdb_logo.png" alt="IMDB" title="IMDB"/>
                     </a>
                 </li>
                 <li>
+                    <h5>Official Site</h5>
                     <a href="https://www.warnerbros.com/matrix">
                         <img src="img/warnerBros_logo.png" alt="Warner Bros." title="Warner Bros."/>
                     </a>
                 </li>
+            </ul>
+            <ul>
                 <li>
+                    <h5>Social Media</h5>
                     <a href="https://www.facebook.com/warnerbrosent">
                         <img src="img/facebook_logo.png" alt="Facebook" title="Facebook"/>
                     </a>
