--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 <!-- Trailer -->    
             <section id="trailer">
                 <h2>Trailer</h2>
-                <video controls>
+                <!-- <video controls>
                     <source src="video/trailer.mp4">
                     <source src="video/trailer.webm">
-                </video>
+                </video> -->
             </section>    
 
             <section id="summary">
@@ -86,7 +86,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="image">
+                    <!-- <figure class="image">
                         <img src="img/Carrie-Anne Moss.jpg" alt="Carrie-Anne Moss" title="Carrie-Anne Moss"/>
                         <figcaption>
                             Carrie-Anne Moss
@@ -105,7 +105,7 @@
                         <figcaption>
                             Gloria Foster
                         </figcaption>
-                    </figure>
+                    </figure> -->
                 </div>
             </section>
       
