--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
 <!-- Required Plugin Stylesheets -->    
     <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
 <!-- My Awesome Styling -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
@@ -162,7 +162,7 @@
 <!-- Plugins(s) -->
     <script type="text/javascript" src="js/lettering.js"></script>
     <script type="text/javascript" src="js/mediaelement.js"></script>
-    <script type="text/javascript" src="js/slick.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <!-- My Scripts -->
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
