--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="#trailer">Trailer</a>
             <a href="#summary">Summary</a>
             <a href="#actors">Actors</a>
+            <a href="#details">Details</a>
             <a href="#screenshots">Screenshots</a>
-            <a href="#more_info">More info</a>
         </nav>
 
     <div id="container">    
@@ -58,8 +58,8 @@
             <section id="trailer">
                 <h2>Trailer</h2>
                 <video controls>
-                    <source src="video/trailer.mp4">
-                    <source src="video/trailer.webm">
+                    <source type="video/mp4" src="video/trailer.mp4"/>
+                    <source type="video/webm" src="video/trailer.webm"/>
                 </video>
             </section>    
 
@@ -110,6 +110,12 @@
                     </figure>
                 </div>
             </section>
+
+<!-- Details -->
+            <section id="details">Details</section>
+
+<!-- Screenshots -->
+            <section id="screenshots">Screenshots</section>
       
         </main>
 
