--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Metadata -->
     <meta charset="UTF-8"/>
+    <meta name="author" content="Jason Campbell"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
@@ -112,10 +113,30 @@
             </section>
 
 <!-- Details -->
-            <section id="details">Details</section>
+            <section id="details">
+                <h2>Details</h2>
+                <div class="two-column">
+                    <ul>
+                        <li>Rating: R</li>
+                        <li>Runtime: 2hrs 16min</li>
+                        <li>Genre: Action, Sci-Fi</li>
+                        <li>Year: 1999</li>
+                    </ul>
+                    <ul>
+                        <li>Directors: Lana Wachowski, Lilly Wachowski</li>
+                        <li>Writers: Lana Wachowski, Lilly Wachowski</li>
+                        <li>Production:  Warner Bros., Village Roadshow Pictures, Groucho Film Partnership, Silver Pictures</li>
+                    </ul>
+                </div>
+            </section>
 
 <!-- Screenshots -->
-            <section id="screenshots">Screenshots</section>
+            <section id="screenshots">
+                <h2>Screenshots</h2>
+                <figure>
+                    <img src="img/screenshot1.jpg" alt="Neo and Morpheus Fight" title="Neo and Morpheus Fight"/>
+                </figure>
+            </section>
       
         </main>
 
