--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/>
 <!-- My Awesome Styling -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
@@ -133,9 +134,41 @@
 <!-- Screenshots -->
             <section id="screenshots">
                 <h2>Screenshots</h2>
-                <figure>
-                    <img src="img/screenshot1.jpg" alt="Neo and Morpheus Fight" title="Neo and Morpheus Fight"/>
-                </figure>
+                <div id="light-gallery">
+                    <a href="img/1.jpg">
+                        <img src="img/thumb/1.jpg" />
+                    </a>
+                    <a href="img/2.jpg">
+                        <img src="img/thumb/2.jpg" />
+                    </a> 
+                    <a href="img/3.jpg">
+                        <img src="img/thumb/3.jpg" />
+                    </a>
+                    <a href="img/4.jpg">
+                        <img src="img/thumb/4.jpg" />
+                    </a>
+                    <a href="img/5.jpg">
+                        <img src="img/thumb/5.jpg" />
+                    </a>
+                    <a href="img/6.jpg">
+                        <img src="img/thumb/6.jpg" />
+                    </a>
+                    <a href="img/7.jpg">
+                        <img src="img/thumb/7.jpg" />
+                    </a>
+                    <a href="img/8.jpg">
+                        <img src="img/thumb/8.jpg" />
+                    </a>
+                    <a href="img/9.jpg">
+                        <img src="img/thumb/9.jpg" />
+                    </a>
+                    <a href="img/10.jpg">
+                        <img src="img/thumb/10.jpg" />
+                    </a>
+                    <a href="img/11.jpg">
+                        <img src="img/thumb/11.jpg" />
+                    </a>
+                </div>
             </section>
       
         </main>
@@ -192,6 +225,9 @@
     <script type="text/javascript" src="js/lettering.js"></script>
     <script type="text/javascript" src="js/mediaelement.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
+    <script type="text/javascript" src="js/lg-thumbnail.js"></script>
+    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script>
 <!-- My Scripts -->
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
