--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 <!-- Aside -->
         <aside>
-
+<!-- Movie Links -->
             <ul>
                 <li>
                     <h5>Purchase Tickets</h5>
@@ -196,6 +196,7 @@
                     </a>
                 </li>
             </ul>
+<!-- Social Media -->            
             <ul>
                 <li>
                     <h5>Social Media</h5>
