--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/> -->
 <!-- My Awesome Styling -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
@@ -118,15 +118,15 @@
                 <h2>Details</h2>
                 <div class="two-column">
                     <ul>
-                        <li>Rating: R</li>
-                        <li>Runtime: 2hrs 16min</li>
-                        <li>Genre: Action, Sci-Fi</li>
-                        <li>Year: 1999</li>
+                        <li class="firstword">Rating: R</li>
+                        <li class="firstword">Runtime: 2hrs 16min</li>
+                        <li class="firstword">Genre: Action, Sci-Fi</li>
+                        <li class="firstword">Year: 1999</li>
                     </ul>
                     <ul>
-                        <li>Directors: Lana Wachowski, Lilly Wachowski</li>
-                        <li>Writers: Lana Wachowski, Lilly Wachowski</li>
-                        <li>Production:  Warner Bros., Village Roadshow Pictures, Groucho Film Partnership, Silver Pictures</li>
+                        <li class="firstword">Directors: Lana Wachowski, Lilly Wachowski</li>
+                        <li class="firstword">Writers: Lana Wachowski, Lilly Wachowski</li>
+                        <li class="firstword">Production:  Warner Bros., Village Roadshow Pictures, Groucho Film Partnership, Silver Pictures</li>
                     </ul>
                 </div>
             </section>
@@ -134,7 +134,7 @@
 <!-- Screenshots -->
             <section id="screenshots">
                 <h2>Screenshots</h2>
-                <div id="light-gallery">
+                <div id="lightgallery-thumbnails">
                     <a href="img/1.jpg">
                         <img src="img/thumb/1.jpg" />
                     </a>
@@ -175,37 +175,39 @@
 
 <!-- Aside -->
         <aside>
+
 <!-- Movie Links -->
             <ul>
                 <li>
                     <h5>Purchase Tickets</h5>
-                    <a href="https://www.fandango.com/">
+                    <a href="https://www.fandango.com/"  target="_blank">
                         <img src="img/fandango_logo.png" alt="Fandango" title="Fandango"/>
                     </a>
                 </li>
                 <li>
                     <h5>IMDB</h5>
-                    <a href="https://www.imdb.com/title/tt0133093">
+                    <a href="https://www.imdb.com/title/tt0133093"  target="_blank">
                         <img src="img/imdb_logo.png" alt="IMDB" title="IMDB"/>
                     </a>
                 </li>
                 <li>
                     <h5>Official Site</h5>
-                    <a href="https://www.warnerbros.com/matrix">
+                    <a href="https://www.warnerbros.com/matrix"  target="_blank">
                         <img src="img/warnerBros_logo.png" alt="Warner Bros." title="Warner Bros."/>
                     </a>
                 </li>
             </ul>
-<!-- Social Media -->            
+
+<!-- Social Media -->      
+            <h5>Social Media</h5>      
             <ul>
                 <li>
-                    <h5>Social Media</h5>
-                    <a href="https://www.facebook.com/warnerbrosent">
+                    <a href="https://www.facebook.com/warnerbrosent" target="_blank">
                         <img src="img/facebook_logo.png" alt="Facebook" title="Facebook"/>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/Warnerbrosent">
+                    <a href="https://twitter.com/Warnerbrosent" target="_blank">
                         <img src="img/twitter_logo.png" alt="Twitter" title="Twitter"/>
                     </a>
                 </li>
@@ -226,9 +228,9 @@
     <script type="text/javascript" src="js/lettering.js"></script>
     <script type="text/javascript" src="js/mediaelement.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
-    <script type="text/javascript" src="js/lg-thumbnail.js"></script>
-    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
+    <script type="text/javascript" src="js/lg-thumbnail.min.js"></script>
+    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script> -->
 <!-- My Scripts -->
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
