--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/> -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/>
 <!-- My Awesome Styling -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
@@ -228,9 +228,9 @@
     <script type="text/javascript" src="js/lettering.js"></script>
     <script type="text/javascript" src="js/mediaelement.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
     <script type="text/javascript" src="js/lg-thumbnail.min.js"></script>
-    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script> -->
+    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script>
 <!-- My Scripts -->
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
