--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css"/>
 <!-- My Awesome Styling -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
@@ -134,38 +135,38 @@
 <!-- Screenshots -->
             <section id="screenshots">
                 <h2>Screenshots</h2>
-                <div id="lightgallery-thumbnails">
-                    <a href="img/1.jpg">
+                <div id="thumbnail-flex thumbnails">
+                    <a data-src="img/1.jpg">
                         <img src="img/thumb/1.jpg" />
                     </a>
-                    <a href="img/2.jpg">
+                    <a data-src="img/2.jpg">
                         <img src="img/thumb/2.jpg" />
                     </a> 
-                    <a href="img/3.jpg">
+                    <a data-src="img/3.jpg">
                         <img src="img/thumb/3.jpg" />
                     </a>
-                    <a href="img/4.jpg">
+                    <a data-src="img/4.jpg">
                         <img src="img/thumb/4.jpg" />
                     </a>
-                    <a href="img/5.jpg">
+                    <a data-src="img/5.jpg">
                         <img src="img/thumb/5.jpg" />
                     </a>
-                    <a href="img/6.jpg">
+                    <a data-src="img/6.jpg">
                         <img src="img/thumb/6.jpg" />
                     </a>
-                    <a href="img/7.jpg">
+                    <a data-src="img/7.jpg">
                         <img src="img/thumb/7.jpg" />
                     </a>
-                    <a href="img/8.jpg">
+                    <a data-src="img/8.jpg">
                         <img src="img/thumb/8.jpg" />
                     </a>
-                    <a href="img/9.jpg">
+                    <a data-src="img/9.jpg">
                         <img src="img/thumb/9.jpg" />
                     </a>
-                    <a href="img/10.jpg">
+                    <a data-src="img/10.jpg">
                         <img src="img/thumb/10.jpg" />
                     </a>
-                    <a href="img/11.jpg">
+                    <a data-src="img/11.jpg">
                         <img src="img/thumb/11.jpg" />
                     </a>
                 </div>
