--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <!-- Normalize CSS via CDN -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
 <!-- Required Plugin Stylesheets -->    
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/burger/2.0.2/css/burger.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/mediaelement.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
@@ -241,6 +242,7 @@
 <!-- jQuery Library via CDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- Plugins(s) -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/burger/2.0.2/scripts/burger.min.js"></script>
     <script type="text/javascript" src="js/lettering.js"></script>
     <script type="text/javascript" src="js/mediaelement.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
