--- a/index.html
+++ b/index.html
@@ -40,26 +40,11 @@
 
 <!-- Navigation -->
     <nav>
-        <!-- Navigation -->
-        <div class="b-nav">
-            <li><a class="b-link b-link--active" href="#Trailer">Trailer</a></li>
-            <li><a class="b-link" href="#Summary">Summary</a></li>
-            <li><a class="b-link" href="#Actors">Actors</a></li>
-            <li><a class="b-link" href="#Additional_Info">Details</a></li>
-            <li><a class="b-link" href="#Tickets">Screenshots</a></li>
-        </div>
-
-        <!-- Burger-Icon -->
-        <div class="b-container">
-            <div class="b-menu">
-                <div class="b-bun b-bun--top"></div>
-                <div class="b-bun b-bun--mid"></div>
-                <div class="b-bun b-bun--bottom"></div>
-            </div>
-
-            <!-- Burger-Brand -->
-            <a href="#" class="b-brand">Menu</a>
-        </div>
+        <a href="#trailer">Trailer</a>
+        <a href="#summary">Summary</a>
+        <a href="#actors">Actors</a>
+        <a href="#details">Details</a>
+        <a href="#screenshots">Screenshots</a>
     </nav>
 
     <div id="container">    
